wk_taa_taaqa/src/objects/EOI_Retry_Log__c.object
<CustomObject>
    <description>If Order Automation service failed log will be created.</description>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <description>Apex job Id</description>
        <label>Apex Job Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Status Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERPOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Order Id</label>
        <referenceTo>ERP_Order__c</referenceTo>
        <relationshipName>Webservice_Retry_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogEntryDateTime__c</fullName>
        <label>Log Entry Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RetryInterval__c</fullName>
        <label>Retry Interval</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetryReasonCode__c</fullName>
        <label>Retry Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetrySequenceNumber__c</fullName>
        <label>Retry Sequence Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EOI Retry Log</label>
    <nameField>
        <displayFormat>Retry-{0000}</displayFormat>
        <label>EOI Retry Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI Retry Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>